log
Thu 28 Mar 2024 05:59:41 PM UTC: 
 tests:  0|6
total_score: 0/70
2cf32ae
Thu 28 Mar 2024 06:07:26 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->current = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->tail = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3431f32
Fri 29 Mar 2024 01:42:37 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->current = list->head;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->tail = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list = (List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c7c525a
Fri 29 Mar 2024 01:45:44 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
02a1647
